Fix Bugzilla 283784: Chart Defects found by "Findbugs"